--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Itim&family=Roboto:wght@400;500&display=swap");
 
 body {
-   font-family: "Lato", sans-serif;
+   font-family: "Roboto", sans-serif;
    background-color: rgb(30 41 59);
+}
+
+.font-itim {
+   font-family: "Itim", cursive;
 }
